--- a/vim-markdown-preview.html
+++ b/vim-markdown-preview.html
@@ -85,9 +85,47 @@
                 <h1>
 <a id="user-content-island-archives-theme" class="anchor" href="#island-archives-theme" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Island Archives Theme</h1>
 <h2>
+<a id="user-content-theme-setup" class="anchor" href="#theme-setup" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Theme Setup</h2>
+<ul>
+<li>download Omega 4 to the theme folder (no need to enable)</li>
+<li>clone this repo and install the subtheme</li>
+<li>enable the Island Archives page template in the theme settings</li>
+</ul>
+<h2>
 <a id="user-content-required-modules" class="anchor" href="#required-modules" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Required Modules</h2>
 <ul>
+<li>Omega 4</li>
 <li>blockify</li>
+<li>menu block</li>
+<li>islandora search</li>
+</ul>
+<p><em>Install with drush:</em></p>
+<pre><code>drush en -y blockify menu_block &amp;&amp; drush dl -y omega
+</code></pre>
+<h2>
+<a id="user-content-structure" class="anchor" href="#structure" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Structure</h2>
+<h3>
+<a id="user-content-header-branding--nav-bar" class="anchor" href="#header-branding--nav-bar" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Header Branding &amp; Nav Bar</h3>
+<ul>
+<li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> IA Branding Logo &amp; Links</li>
+<li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> support a combination of Main menu, User menu and search</li>
+</ul>
+<h3>
+<a id="user-content-footer" class="anchor" href="#footer" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Footer</h3>
+<ul>
+<li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> any block added to the footer will automatically space horizontally</li>
+</ul>
+<h3>
+<a id="user-content-subfooter" class="anchor" href="#subfooter" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>SubFooter</h3>
+<ul>
+<li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> UPEI address and branding</li>
+</ul>
+<h3>
+<a id="user-content-landing-page" class="anchor" href="#landing-page" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Landing Page</h3>
+<ul>
+<li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> Hero panel with Image and Branding</li>
+<li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> Site description block</li>
+<li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> feature/block showcase region</li>
 </ul>
 
               </article>
